--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Mr. Pluffy SM Olongapo</h1>
-
+    <p>Coming soon!</p>
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
@@ -21,8 +21,8 @@
     <div class="fb-customerchat"
       attribution="setup_tool"
       page_id="206223209982563"
-      theme_color="#C93C93">
+      theme_color="#0084ff">
     </div>
-    
+
   </body>
 </html>
